[gd_scene load_steps=14 format=3 uid="uid://d2ay3pm0o6uf7"]

[ext_resource type="Texture2D" uid="uid://dnu6afft4sc34" path="res://src/assets/images/omega-modern/enemy.png" id="1_aeay7"]
[ext_resource type="Script" path="res://src/objects/Npc/MovableNpc.gd" id="1_kb7d2"]
[ext_resource type="PackedScene" path="res://src/objects/Player/PlayerAnimations.tscn" id="2_7ldyo"]

[sub_resource type="Animation" id="7"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="8"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="9"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="10"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="2"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="3"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}

[sub_resource type="Animation" id="1"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}

[sub_resource type="Animation" id="4"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jvx46"]
_data = {
"idle_down": SubResource("7"),
"idle_left": SubResource("8"),
"idle_right": SubResource("9"),
"idle_up": SubResource("10"),
"walk_down": SubResource("2"),
"walk_left": SubResource("3"),
"walk_right": SubResource("1"),
"walk_up": SubResource("4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gaq3n"]
size = Vector2(10, 13)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_kb7d2")
behaviorChainJson = "[]"

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(16, 8)
texture = ExtResource("1_aeay7")
hframes = 3
vframes = 4
frame = 1

[node name="NpcAnimations" parent="." instance=ExtResource("2_7ldyo")]

[node name="AnimationPlayer" parent="NpcAnimations" index="0"]
libraries = {
"": SubResource("AnimationLibrary_jvx46")
}

[node name="AnimationTree" parent="NpcAnimations" index="1"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_jvx46")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 15.5)
shape = SubResource("RectangleShape2D_gaq3n")
debug_color = Color(0.972549, 0, 0.439216, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]

[editable path="NpcAnimations"]
